--- a/image_preprocessing.ipynb
+++ b/image_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,20 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Scaling down Images if needed\n",
     "MAX_SIZE = (500,500)\n",
     "image = Image.open('img1.jpg')\n",
-    "img_temp = image\n",
     "image.thumbnail(MAX_SIZE, PIL.Image.ANTIALIAS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "548d08315de04376838fa22d9f86c96c",
+       "model_id": "8659ebafb3ef402390b1e5c5c7d42343",
        "version_major": 2,
        "version_minor": 0
       },
@@ -106,10 +105,10 @@
     "green_mode = statistics.mode(green_filter_pixels)\n",
     "blue_mode = statistics.mode(blue_filter_pixels)\n",
     "\n",
+    "\n",
     "#getting range for filter\n",
     "@interact(r=(0.0,1.0,0.05),g=(0.0,1.0,0.05),b=(0.0,1.0,0.05))\n",
     "def adj_range(r=red_mode_range,g=green_mode_range,b=blue_mode_range):\n",
-    "    image = img_temp\n",
     "    red_low, red_high = red_mode * (1-r), red_mode * (1+r)\n",
     "    green_low, green_high = green_mode * (1-g), green_mode * (1+g)\n",
     "    blue_low, blue_high = blue_mode * (1-b), blue_mode * (1+b)\n",
@@ -119,10 +118,11 @@
     "    pixels = image.load()\n",
     "    for i in range(image.width):\n",
     "        for j in range(image.height):\n",
-    "            if pixels[i,j][0] >= red_low and pixels[i,j][0] <= red_high or pixels[i,j][1] >= green_low and pixels[i,j][1] <= green_high or pixels[i,j][2] >= blue_low and pixels[i,j][2] <= blue_high:\n",
+    "            if pixels[i,j][0] >= red_low and pixels[i,j][0] <= red_high or \\\n",
+    "               pixels[i,j][1] >= green_low and pixels[i,j][1] <= green_high or \\\n",
+    "               pixels[i,j][2] >= blue_low and pixels[i,j][2] <= blue_high:\n",
     "                pixels[i,j] = (255,255,255)\n",
-    "    \n",
-    "    display(image)"
+    "    display(image)\n"
    ]
   },
   {
