--- a/image_preprocessing.ipynb
+++ b/image_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,18 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c9510a40ffd44dc0a20605b519bac9ac",
+       "model_id": "9a17dfc412a64e38b4c16c2b94bef3ee",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.32, description='r', max=1.0, step=0.05), FloatSlider(value=0.0, des…"
+       "interactive(children=(FloatSlider(value=0.32, description='r', max=1.0, step=0.01), FloatSlider(value=0.0, des…"
       ]
      },
      "metadata": {},
@@ -102,7 +102,7 @@
     "blue_mode_range = 0.22\n",
     "\n",
     "#getting range for filter\n",
-    "@interact(r=(0.0,1.0,0.05),g=(0.0,1.0,0.05),b=(0.0,1.0,0.05))\n",
+    "@interact(r=(0.0,1.0,0.01),g=(0.0,1.0,0.01),b=(0.0,1.0,0.01))\n",
     "def adj_range(r=red_mode_range,g=green_mode_range,b=blue_mode_range):\n",
     "    red_range = (int(red_mode * (1-r)), int(red_mode * (1+r)))\n",
     "    green_range = (int(green_mode * (1-g)), int(green_mode * (1+g)))\n",
@@ -116,7 +116,7 @@
     "            if pixels[i,j][0] in range(red_range[0],red_range[1]) or \\\n",
     "               pixels[i,j][1] in range(green_range[0],green_range[1]) or \\\n",
     "               pixels[i,j][2] in range(blue_range[0],blue_range[1]):\n",
-    "                pixels[i,j] = (255,255,255)\n",
+    "                pixels[i,j] = (255,255,255) #replaces filtered pixels with white\n",
     "    display(image)\n"
    ]
   },
