--- a/base_performance_test.ipynb
+++ b/base_performance_test.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "id": "ef1262d4",
+   "execution_count": 5,
+   "id": "6325b69b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
+    "from keras.utils.vis_utils import plot_model\n",
     "from graphviz import Digraph\n",
     "import pydot\n",
     "\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b9a2b69",
+   "id": "a92f49af",
    "metadata": {},
    "source": [
     "## Adjust CSV"
@@ -36,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "a61f5516",
+   "id": "c61a1838",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "8a2b10c2",
+   "id": "740e8dba",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "8bf2bfa6",
+   "id": "e4675acc",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfcd99bc",
+   "id": "3d6092d5",
    "metadata": {},
    "source": [
     "## Load images"
@@ -344,15 +345,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "26270064",
+   "execution_count": 180,
+   "id": "c23485ac",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████| 51033/51033 [19:28<00:00, 43.66it/s]\n"
+      "  0%|▏                                                                             | 160/51033 [00:03<19:31, 43.41it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [180]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m dataset \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i,img \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(tqdm(images)):\n\u001b[1;32m----> 5\u001b[0m     image \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimread\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtrain_images/\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mimg\u001b[49m\u001b[43m,\u001b[49m\u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mIMREAD_GRAYSCALE\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;66;03m#imports pictures in grayscale since colors have own dimension\u001b[39;00m\n\u001b[0;32m      6\u001b[0m     image \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mresize(image, dsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m64\u001b[39m, \u001b[38;5;241m64\u001b[39m), interpolation\u001b[38;5;241m=\u001b[39mcv2\u001b[38;5;241m.\u001b[39mINTER_CUBIC)\n\u001b[0;32m      7\u001b[0m     \u001b[38;5;66;03m#dataset.append((image,sid[i]))\u001b[39;00m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -361,7 +373,7 @@
     "MAX_SIZE = 64\n",
     "dataset = []\n",
     "for i,img in enumerate(tqdm(images)):\n",
-    "    image = cv2.imread(\"train_images/\"+img,cv2.IMREAD_GRAYSCALE)\n",
+    "    image = cv2.imread(\"train_images/\"+img,cv2.IMREAD_GRAYSCALE)#imports pictures in grayscale since colors have own dimension\n",
     "    image = cv2.resize(image, dsize=(64, 64), interpolation=cv2.INTER_CUBIC)\n",
     "    #dataset.append((image,sid[i]))\n",
     "    dataset.append(image)\n"
@@ -370,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "b8023778",
+   "id": "f5178331",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "4bf16e1e",
+   "id": "bd5b9c76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +457,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16c83a66",
+   "id": "fc951fee",
    "metadata": {},
    "source": [
     "## Modelling"
@@ -453,29 +465,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "id": "53b8a4b7",
+   "execution_count": 7,
+   "id": "0e727c41",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_12\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " flatten_12 (Flatten)        (None, 4096)              0         \n",
+      " flatten_2 (Flatten)         (None, 4096)              0         \n",
       "                                                                 \n",
-      " dense_42 (Dense)            (None, 512)               2097664   \n",
+      " dense_10 (Dense)            (None, 512)               2097664   \n",
       "                                                                 \n",
-      " dense_43 (Dense)            (None, 256)               131328    \n",
+      " dense_11 (Dense)            (None, 256)               131328    \n",
       "                                                                 \n",
-      " dense_44 (Dense)            (None, 128)               32896     \n",
+      " dense_12 (Dense)            (None, 128)               32896     \n",
       "                                                                 \n",
-      " dense_45 (Dense)            (None, 64)                8256      \n",
+      " dense_13 (Dense)            (None, 64)                8256      \n",
       "                                                                 \n",
-      " dense_46 (Dense)            (None, 26)                1690      \n",
+      " dense_14 (Dense)            (None, 26)                1690      \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 2,271,834\n",
@@ -490,20 +502,20 @@
     "#generating model\n",
     "model = keras.Sequential([\n",
     "    layers.Flatten(input_shape=[64, 64]),\n",
-    "    #layers.Dense(512, activation=\"relu\"),\n",
-    "    #layers.Dense(256, activation=\"relu\"),\n",
+    "    layers.Dense(512, activation=\"relu\"),\n",
+    "    layers.Dense(256, activation=\"relu\"),\n",
     "    layers.Dense(128, activation=\"relu\"),\n",
     "    layers.Dense(64, activation=\"relu\"),\n",
     "    layers.Dense(26, activation=\"softmax\"),\n",
     "])\n",
     "model.summary()\n",
-    "keras.utils.plot_model(model, show_shapes=True)"
+    "plot_model(model,show_shapes=True, show_layer_names=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "b8ba8501",
+   "id": "02827a90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "e58d13ee",
+   "id": "a80dc00d",
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": 175,
-   "id": "0a0c9c37",
+   "id": "dd841bb9",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "5135d5b3",
+   "id": "e5f3064b",
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +654,7 @@
   {
    "cell_type": "code",
    "execution_count": 179,
-   "id": "0b92d889",
+   "id": "94d6a9d5",
    "metadata": {},
    "outputs": [
     {
@@ -665,12 +677,12 @@
    ],
    "source": [
     "#evaluate model\n",
-    "model.evaluate(X_train, y_train)"
+    "model.evaluate(X_test, y_test)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2397c29b",
+   "id": "710f255f",
    "metadata": {},
    "source": [
     "## Predicting"
@@ -679,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "4aa0508f",
+   "id": "e9bb2890",
    "metadata": {},
    "outputs": [
     {
@@ -695,14 +707,13 @@
     "if model not in globals():\n",
     "    model = pickle.load(open('base_model.pkl', 'rb'))\n",
     "    \n",
-    "X_new = X_test\n",
-    "y_proba = model.predict(X_new)\n"
+    "y_proba = model.predict(X_test)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bb6f253",
+   "id": "b2d6d64d",
    "metadata": {},
    "outputs": [],
    "source": []
