--- a/image_preprocessing.ipynb
+++ b/image_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,19 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Scaling down Images if needed\n",
     "MAX_SIZE = (500,500)\n",
     "image = Image.open('img1.jpg')\n",
-    "image.thumbnail(MAX_SIZE, PIL.Image.ANTIALIAS)"
+    "image.thumbnail(MAX_SIZE, Image.ANTIALIAS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,18 +71,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a17dfc412a64e38b4c16c2b94bef3ee",
+       "model_id": "d5d2bf2590a54a7a9985531489bd6fa2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.32, description='r', max=1.0, step=0.01), FloatSlider(value=0.0, des…"
+       "interactive(children=(FloatSlider(value=0.0, description='r', max=1.0, step=0.01), FloatSlider(value=0.0, desc…"
       ]
      },
      "metadata": {},
@@ -97,9 +97,9 @@
     "\n",
     "\n",
     "#calculate mode of red channel --> to determine water | DEFAULT VAL\n",
-    "red_mode_range = 0.32\n",
+    "red_mode_range = 0.0\n",
     "green_mode_range = 0\n",
-    "blue_mode_range = 0.22\n",
+    "blue_mode_range = 0.0\n",
     "\n",
     "#getting range for filter\n",
     "@interact(r=(0.0,1.0,0.01),g=(0.0,1.0,0.01),b=(0.0,1.0,0.01))\n",
@@ -137,7 +137,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
