--- a/input_pipeline.ipynb
+++ b/input_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e771bafc",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e2a50b95",
    "metadata": {},
    "outputs": [
@@ -31,8 +31,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num GPUs Available:  0\n",
-      "Device mapping: no known devices.\n"
+      "Device mapping: no known devices.\n",
+      "Num GPUs Available:  0\n"
      ]
     },
     {
@@ -42,7 +42,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mSystemError\u001b[0m                               Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m device_name \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtest\u001b[38;5;241m.\u001b[39mgpu_device_name()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m device_name:\n\u001b[1;32m----> 7\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mSystemError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGPU device not found\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFound GPU at: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(device_name))\n",
+      "Input \u001b[1;32mIn [3]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m device_name \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mtest\u001b[38;5;241m.\u001b[39mgpu_device_name()\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m device_name:\n\u001b[1;32m----> 8\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mSystemError\u001b[39;00m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGPU device not found\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFound GPU at: \u001b[39m\u001b[38;5;132;01m{}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mformat(device_name))\n",
       "\u001b[1;31mSystemError\u001b[0m: GPU device not found"
      ]
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "164e9e7a",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
        "[51033 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "6ae417ca",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "b87e44c3",
    "metadata": {},
    "outputs": [
@@ -362,7 +362,7 @@
        "[51033 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "46b25243",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "32bfdbff",
    "metadata": {},
    "outputs": [],
@@ -464,23 +464,26 @@
     "#dataset = tf.data.Dataset.list_files('train_images/*').map(lambda x: tf.py_function(process_path, [x], [tf.float32,tf.int64]))\n",
     "#dataset = tf.data.Dataset.list_files('train_images/*').map(lambda x: tf.py_function(process_path, [x], [tf.float32,tf.int64]),num_parallel_calls=tf.data.AUTOTUNE)\n",
     "\n",
-    "dataset = tf.data.Dataset.from_tensor_slices((full_img, labels)).map(process_tuple,num_parallel_calls=tf.data.AUTOTUNE, deterministic=False)"
+    "dataset = tf.data.Dataset.from_tensor_slices((full_img, labels)).map(process_tuple,num_parallel_calls=tf.data.AUTOTUNE, deterministic=False).shuffle(BATCH_SIZE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a9c52304",
    "metadata": {},
    "outputs": [],
    "source": [
     "image_count = dataset.cardinality().numpy()\n",
-    "train_size = int(image_count*0.8)\n",
+    "train_size = int(image_count*0.7)\n",
+    "val_test_size = (1-train_size)/2\n",
     "train_ds = dataset.take(train_size)\n",
-    "test_ds = dataset.skip(train_size)\n",
+    "val_ds = dataset.skip(train_size).take(val_test_size)\n",
+    "test_ds = dataset.skip(train_size).skip(val_test_size)\n",
     "\n",
     "\n",
-    "train_batched = train_ds.batch(batch_size=BATCH_SIZE).cache().prefetch(BATCH_SIZE) \n",
+    "train_batched = train_ds.batch(batch_size=BATCH_SIZE).cache().prefetch(BATCH_SIZE)\n",
+    "val_batched = val_ds.batch(batch_size=BATCH_SIZE).cache().prefetch(BATCH_SIZE)\n",
     "test_batched = test_ds.batch(batch_size=BATCH_SIZE).cache().prefetch(BATCH_SIZE)"
    ]
   },
@@ -644,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "a9b7bcf8",
    "metadata": {},
    "outputs": [],
@@ -713,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "2c7e56f4",
    "metadata": {},
    "outputs": [
@@ -873,7 +876,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "08973da5",
    "metadata": {},
    "outputs": [],
@@ -909,17 +912,17 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      " 21/160 [==>...........................] - ETA: 20:38 - loss: 2.9691 - sparse_categorical_accuracy: 0.1589"
+      " 16/160 [==>...........................] - ETA: 23:51 - loss: 3.0278 - sparse_categorical_accuracy: 0.1519"
      ]
     }
    ],
    "source": [
     "if device_name != '/device:GPU:0':\n",
     "    with tf.device('/cpu:0'):  \n",
-    "        cnnmodel.fit(train_batched, epochs = 5, validation_data = test_batched)\n",
+    "        cnnmodel.fit(train_batched, epochs = 5, validation_data = val_batched)\n",
     "else:\n",
     "    with tf.device('/device:GPU:0'):  \n",
-    "        cnnmodel.fit(train_batched, epochs = 5, validation_data = test_batched)\n",
+    "        cnnmodel.fit(train_batched, epochs = 5, validation_data = val_batched)\n",
     "\n"
    ]
   },
