--- a/base_performance_test.ipynb
+++ b/base_performance_test.ipynb
@@ -819,14 +819,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' resizing dataset --- Create a folder train_images_sized and run this code one time to create the rescaled dataset\n",
+    " \n",
+    "# resizing dataset --- Create a folder train_images_sized and run this code one time to create the rescaled dataset\n",
     "from PIL import ImageFile\n",
     "ImageFile.LOAD_TRUNCATED_IMAGES = True\n",
+    "\n",
+    "def resize_with_crop_or_pad_for_resizing(im, process=False, flip=False, rotate_scale=None, br=None, non_square=None, crop=None):\n",
+    "\n",
+    "    old_size = im.size  # old_size[0] is in (width, height) format\n",
+    "    max_dim = np.argmax(old_size)\n",
+    "    ratio = float(DESIRED_SIZE[max_dim]) / old_size[max_dim]\n",
+    "\n",
+    "    #ratio = float(max(desired_size)) / max(old_size)\n",
+    "    new_size = tuple([int(x * ratio) for x in old_size])\n",
+    "    # use thumbnail() or resize() method to resize the input image\n",
+    "\n",
+    "    # thumbnail is a in-place operation\n",
+    "\n",
+    "    #im.thumbnail(new_size, Image.ANTIALIAS)\n",
+    "    #im = im.resize(new_size, Image.ANTIALIAS)\n",
+    "    #im = im.convert('RGB')\n",
+    " \n",
+    "    if crop is not None:\n",
+    "        crop_value = 0.0\n",
+    "        prob = np.random.uniform(0, 1)\n",
+    "        if prob > 0.75:\n",
+    "            crop_value = crop\n",
+    "            im = ImageOps.crop(im, int(crop_value*im.size[1]))\n",
+    "        elif prob > 0.5 and prob <= 0.75:\n",
+    "            crop_value = crop*0.625\n",
+    "        else:\n",
+    "            crop_value = np.abs(np.random.uniform(0, 0.075))\n",
+    "\n",
+    "        im = ImageOps.crop(im, int(crop_value*im.size[1]))\n",
+    "\n",
+    "    if rotate_scale is not None:\n",
+    "        sx, sy = np.random.normal(scale=rotate_scale[1])+1, np.random.normal(scale=rotate_scale[1])+1\n",
+    "        r = np.random.normal(scale=rotate_scale[0])\n",
+    "        im = scale_and_rotate_image(im, sx, sy, r)\n",
+    "       \n",
+    "\n",
+    "    if br is not None:\n",
+    "        b = np.random.normal(scale=br)+0.9\n",
+    "        c = np.random.normal(scale=br)+0.9\n",
+    "      \n",
+    "        enhancerc = ImageEnhance.Contrast(im)\n",
+    "        im = enhancerc.enhance(c)\n",
+    "        enhancerb = ImageEnhance.Brightness(im)\n",
+    "        im = enhancerb.enhance(b)\n",
+    "        #im = im.resize((mobilenet_input_shape[0], mobilenet_input_shape[1]), Image.ANTIALIAS)\n",
+    "\n",
+    "    im = im.resize(new_size, Image.ANTIALIAS)\n",
+    "\n",
+    "    if flip:\n",
+    "        ran = np.random.random_sample()\n",
+    "\n",
+    "        if ran >= 0.5:\n",
+    "            im = im.transpose(Image.FLIP_LEFT_RIGHT)\n",
+    "    #im.show()\n",
+    "    # create a new image and paste the resized on it\n",
+    "    if non_square is not None:\n",
+    "        new_im = Image.new(\"RGB\", (DESIRED_SIZE[0], DESIRED_SIZE[1]))\n",
+    "        new_im.paste(im, ((DESIRED_SIZE[0] - new_size[0]) // 2,\n",
+    "                        (DESIRED_SIZE[1] - new_size[1]) // 2))\n",
+    "        #if process:\n",
+    "        #    new_im = np.array(new_im, dtype=np.float32) / 255.\n",
+    "        #else:\n",
+    "        #    new_im = np.array(new_im, dtype=np.float32)\n",
+    "        \n",
+    "        return new_im#[:,:,:3]\n",
+    "    \n",
+    "    if process:\n",
+    "        im = np.array(new_im, dtype=np.float32) / 255.\n",
+    "    else:\n",
+    "        im = np.array(im, dtype=np.float32)\n",
+    "    \n",
+    "    return im[:,:,:3]\n",
     "\n",
     "for i in range(len(train_df)):\n",
     "    if os.path.isfile(TRAIN_DIR + \"train_images_sized/\" + train_df.iat[i, 0]):\n",
     "        continue\n",
-    "    img = resize_with_crop_or_pad(\n",
+    "    img = resize_with_crop_or_pad_for_resizing(\n",
     "                Image.open(TRAIN_DIR + \"train_images/\" + train_df.iat[i, 0]),\n",
     "                #process=True,\n",
     "                #flip=True,\n",
@@ -835,8 +908,7 @@
     "                non_square=True\n",
     "            )\n",
     "    img.save(TRAIN_DIR + \"train_images_sized/\" + train_df.iat[i, 0])\n",
-    "\n",
-    "'''"
+    "\n"
    ]
   },
   {
@@ -1273,7 +1345,73 @@
      "output_type": "stream",
      "text": [
       "train loss, acc: 3.397674322128296, 0.0\n",
-      "train loss, acc: 2.4766085147857666, 0.5\n"
+      "train loss, acc: 2.4766085147857666, 0.5\n",
+      "train loss, acc: 2.444448947906494, 0.25\n",
+      "train loss, acc: 2.489030361175537, 0.3125\n",
+      "train loss, acc: 2.295797348022461, 0.0625\n",
+      "train loss, acc: 2.202822685241699, 0.5\n",
+      "train loss, acc: 2.094219923019409, 0.375\n",
+      "train loss, acc: 2.488677978515625, 0.5\n",
+      "train loss, acc: 2.0775179862976074, 0.375\n",
+      "train loss, acc: 1.4693293571472168, 0.375\n",
+      "train loss, acc: 1.9266091585159302, 0.375\n",
+      "train loss, acc: 1.7579792737960815, 0.4375\n",
+      "train loss, acc: 2.155975580215454, 0.375\n",
+      "train loss, acc: 1.6976861953735352, 0.5\n",
+      "train loss, acc: 2.8921782970428467, 0.0625\n",
+      "train loss, acc: 2.231779098510742, 0.5\n",
+      "train loss, acc: 2.0930638313293457, 0.25\n",
+      "train loss, acc: 2.7982232570648193, 0.3125\n",
+      "train loss, acc: 2.41386079788208, 0.25\n",
+      "train loss, acc: 2.561384916305542, 0.5\n",
+      "train loss, acc: 2.4308035373687744, 0.3125\n",
+      "train loss, acc: 2.285285472869873, 0.3125\n",
+      "train loss, acc: 2.0478107929229736, 0.4375\n",
+      "train loss, acc: 1.7532579898834229, 0.375\n",
+      "train loss, acc: 2.2309842109680176, 0.25\n",
+      "train loss, acc: 1.9857356548309326, 0.3125\n",
+      "train loss, acc: 2.5194520950317383, 0.25\n",
+      "train loss, acc: 1.8246676921844482, 0.375\n",
+      "train loss, acc: 1.8302749395370483, 0.5625\n",
+      "train loss, acc: 1.6774969100952148, 0.5625\n",
+      "train loss, acc: 1.5821499824523926, 0.5625\n",
+      "train loss, acc: 1.7928977012634277, 0.4375\n",
+      "train loss, acc: 1.915359377861023, 0.4375\n",
+      "train loss, acc: 2.0900909900665283, 0.375\n",
+      "train loss, acc: 1.7749651670455933, 0.4375\n",
+      "train loss, acc: 1.560659646987915, 0.625\n",
+      "train loss, acc: 1.7910256385803223, 0.5625\n",
+      "train loss, acc: 2.1829984188079834, 0.4375\n",
+      "train loss, acc: 2.1653213500976562, 0.4375\n",
+      "train loss, acc: 2.1677937507629395, 0.3125\n",
+      "train loss, acc: 1.9066208600997925, 0.3125\n",
+      "train loss, acc: 2.055529832839966, 0.375\n",
+      "train loss, acc: 1.5389533042907715, 0.625\n",
+      "train loss, acc: 1.7281968593597412, 0.625\n",
+      "train loss, acc: 1.3704919815063477, 0.625\n",
+      "train loss, acc: 1.5238374471664429, 0.4375\n",
+      "train loss, acc: 1.3985146284103394, 0.4375\n",
+      "train loss, acc: 1.6999592781066895, 0.375\n",
+      "train loss, acc: 0.910602331161499, 0.8125\n",
+      "train loss, acc: 1.79317307472229, 0.375\n",
+      "train loss, acc: 2.0157196521759033, 0.4375\n",
+      "train loss, acc: 1.8011144399642944, 0.25\n",
+      "train loss, acc: 2.4862217903137207, 0.0625\n",
+      "train loss, acc: 1.806754469871521, 0.375\n",
+      "train loss, acc: 1.4451525211334229, 0.4375\n",
+      "train loss, acc: 1.6778587102890015, 0.4375\n",
+      "train loss, acc: 1.297873616218567, 0.625\n",
+      "train loss, acc: 2.3684563636779785, 0.375\n",
+      "train loss, acc: 1.8772861957550049, 0.25\n",
+      "train loss, acc: 1.1006145477294922, 0.625\n",
+      "train loss, acc: 1.9652527570724487, 0.375\n",
+      "train loss, acc: 1.5051015615463257, 0.625\n",
+      "train loss, acc: 1.6627323627471924, 0.5625\n",
+      "train loss, acc: 2.092226266860962, 0.5\n",
+      "train loss, acc: 2.32035231590271, 0.25\n",
+      "train loss, acc: 1.601830005645752, 0.375\n",
+      "train loss, acc: 1.4328407049179077, 0.4375\n",
+      "train loss, acc: 1.8895753622055054, 0.375\n"
      ]
     }
    ],
