--- a/input_pipeline.ipynb
+++ b/input_pipeline.ipynb
@@ -459,20 +459,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    os.makedirs(RES)\n",
-    "except OSError as e:\n",
-    "    if e.errno != errno.EEXIST:\n",
-    "        raise\n",
+    "if not os.path.exists(RES):\n",
+    "    for image in tqdm(images):s\n",
+    "        savePath = RES + image  \n",
+    "        if not os.path.exists(savePath):\n",
+    "            imgPath = SOURCE + image\n",
+    "            im = Image.open(imgPath)\n",
     "\n",
-    "for image in tqdm(images):\n",
-    "    savePath = RES + image  \n",
-    "    if not os.path.exists(savePath):\n",
-    "        imgPath = SOURCE + image\n",
-    "        im = Image.open(imgPath)\n",
-    "    \n",
-    "        resizedImage = im.resize((IMG_SIZE, IMG_SIZE), PIL.Image.ANTIALIAS)\n",
-    "        resizedImage.save(savePath) "
+    "            resizedImage = im.resize((IMG_SIZE, IMG_SIZE), PIL.Image.ANTIALIAS)\n",
+    "            resizedImage.save(savePath) "
    ]
   },
   {
