added classification report

--- a/model_evaluation.ipynb
+++ b/model_evaluation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ef07584",
+   "id": "52f18c26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,14 @@
     "import seaborn as sns\n",
     "\n",
     "from tensorflow import keras\n",
-    "from sklearn.metrics import confusion_matrix"
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import classification_report"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9498e615",
+   "id": "ffaf41f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50208b9a",
+   "id": "0581afaa",
    "metadata": {},
    "source": [
     "## Constants"
@@ -50,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f3d45b5",
+   "id": "85a28af8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c46fadb",
+   "id": "7ca85279",
    "metadata": {},
    "source": [
     "## Input Pipeline"
@@ -76,22 +77,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "975fc629",
+   "id": "8001970d",
    "metadata": {},
    "outputs": [],
    "source": [
     "@tf.function\n",
-    "def process_tuple(image,label):\n",
+    "def process_tuple(image):\n",
     "    img = tf.io.read_file(image)\n",
     "    img = tf.image.decode_jpeg(img, channels=CHANNELS)\n",
     "    img = tf.image.convert_image_dtype(img, tf.float16)\n",
-    "    return img, label"
+    "    return img"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "864f92b0",
+   "id": "72471a25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,19 +102,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8d09945",
+   "id": "7bdc07fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_label = list(test_even_df[\"species\"].values)\n",
+    "#test_label = list(test_even_df[\"species\"].values) --(test_img,test_label)\n",
     "test_img = list(map(RES.__add__,test_even_df[\"image\"]))\n",
-    "test_ds = tf.data.Dataset.from_tensor_slices((test_img,test_label)).shuffle(1000, seed = 1337).map(process_tuple,num_parallel_calls=tf.data.AUTOTUNE, deterministic=False)"
+    "test_ds = tf.data.Dataset.from_tensor_slices(test_img).map(process_tuple,num_parallel_calls=tf.data.AUTOTUNE, deterministic=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a09f9f53",
+   "id": "b7506882",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13a8c371",
+   "id": "88fa0158",
    "metadata": {},
    "source": [
     "## Evaluate models"
@@ -131,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0058afb0",
+   "id": "a7345faa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b692cc09",
+   "id": "ca417fa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +192,10 @@
     "    \n",
     "    \n",
     "    test_error_rate = round((1-cval[1])*100,2)\n",
-    "    metrics.append([model, cval,test_error_rate])"
+    "    rep = classification_report(y_act, y_pred)\n",
+    "    \n",
+    "    metrics.append([model, cval,test_error_rate, rep])\n",
+    "    "
    ]
   }
  ],
